# ui-viewer

./: .gitignore  DEVELOP.md  README.md  pyproject.toml
docs/: api.md
docs/treeData/: android.json  harmony.json  ios.json
uiviever/: main.py
uiviever/routers/: api.py
uiviever/static/: index.html
uiviever/static/js/: config.js  index.js
uiviever/utils/: common.py  device.py  exception.py  models.py  uidumplib.py
uiviewer/: __main__.py  _device.py  _models.py  _utils.py  _version.py  app.py  cli.py  go_ios_cli.py
uiviewer/parser/: android_hierarchy.py  harmony_hierarchy.py  ios_hierarchy.py  utils.py  xpath_lite.py
uiviewer/routers/: api.py
uiviewer/static/: index.html
uiviewer/static/cdn/code.jquery.com/: jquery-3.6.0.min.js
uiviewer/static/cdn/unpkg.com/element-ui/lib/: index.js
uiviewer/static/css/: style.css
uiviewer/static/js/: api.js  config.js  index.js  utils.js
